<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".cropdata.spinachActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/headerTV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SPINACH GROW GUIDE"
            android:paddingBottom="15dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeSoilTv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerTV2"
            android:text="SOIL"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/soilInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/typeSoilTv2"
            android:text="@string/soil_information3"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/ptnTv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soilInfo2"
            android:text="POSITION"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ptnInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ptnTv2"
            android:text="@string/position_info3"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/sowTv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ptnInfo2"
            android:text="SOWING AND PLANTING"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sowInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sowTv2"
            android:text="@string/crop_info3"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/hvTv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sowInfo2"
            android:text="HARVESTING"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/hvTvInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hvTv2"
            android:text="@string/harvest_info3"/>

        <TextView
            android:id="@+id/infoMore5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLICK HERE FOR MORE INFO!"
            android:textColor="@color/green"
            android:layout_below="@id/hvTvInfo2"
            />

        <WebView
            android:id="@+id/webview_player_view5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/infoMore5"/>



    </RelativeLayout>
</ScrollView>