<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".cropdata.tomatoesActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/headerTV4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TOMATOES GROW GUIDE"
            android:paddingBottom="15dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/typeSoilTv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerTV4"
            android:text="SOIL"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/soilInfo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/typeSoilTv4"
            android:text="@string/soil_info5"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/ptnTv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/soilInfo4"
            android:text="POSITION"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ptnInfo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ptnTv4"
            android:text="@string/position_info5"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/sowTv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ptnInfo4"
            android:text="SOWING AND PLANTING"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/sowInfo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sowTv4"
            android:text="@string/crop_info5"
            android:paddingBottom="15dp"/>
        <TextView
            android:id="@+id/hvTv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sowInfo4"
            android:text="HARVESTING"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/hvTvInfo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hvTv4"
            android:text="@string/harvest_info5"/>

        <TextView
            android:id="@+id/infoMore7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CLICK HERE FOR MORE INFO!"
            android:textColor="@color/green"
            android:layout_below="@id/hvTvInfo4"
            />

        <WebView
            android:id="@+id/webview_player_view7"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/infoMore7"/>


    </RelativeLayout>
</ScrollView>